--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,11 @@
     <string name="category_view_set_title">我的分类</string>
     <string name="category_view_set_change_title">点击编辑分类</string>
 
+    <string name="forbidden_add_title">添加屏蔽词</string>
+    <string name="forbidden_add_tip">屏蔽词务必简短精炼，例如“小学”</string>
+    <string name="forbidden_add_button">添加</string>
+    <string name="forbidden_list_delete">移除</string>
+
     <string name="app_id">59b787e1</string>
     <string name="iflytek_prefer_name">iflytek_settings</string>
     <string formatted="false" name="tts_toast_format">缓冲进度为%d%%，播放进度为%d%%</string>
