--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,9 +12,10 @@
     <string name="nav_voice_title">播报设置</string>
     <string name="nav_night_mode_title">夜间模式</string>
     <string name="nav_text_mode_title">文本模式</string>
-    <string name="nav_speed_title">播报语速</string>
-    <string name="nav_volume_title">播报音量</string>
-    <string name="nav_pitch_title">播报音调</string>
+
+    <string name="voice_set_speed_title">语速</string>
+    <string name="voice_set_volume_title">音量</string>
+    <string name="voice_set_pitch_title">音调</string>
 
     <string name="category_view_set_title">我的分类</string>
     <string name="category_view_set_change_title">点击编辑分类</string>
